Fixes #8 Submit button causing x-overflow on Chrome when mobile (for real this time). It's not a great fix though... but it'll do for now.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -507,6 +507,13 @@ a:hover {
     height: 100%;
 }
 
+
+/* Fixes body scrolling issue */
+.twitter-typeahead pre {
+    left: -9999px;
+    top: -9999px;
+}
+
 @media screen and (max-width: 800px) {
     #heroinput,
     .twitter-typeahead,
